--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 <div class="services">
   <h3>Available Services</h3>
   <ul>
-    <li>Timesheet</li>
+    <li><a href="{{ url_for('timesheet_home') }}">Timesheet</a></li>
     <li>Leave Management</li>
     <li>IT Helpdesk</li>
     <li>Finance Reports</li>
