--- a/templates/view_entries_by_date.html
+++ b/templates/view_entries_by_date.html
@@ -35,11 +35,7 @@
           <td>{{ entry.category_3 }}</td>
           <td>{{ entry.comments }}</td>
           <td>
-            <form
-              action="{{ url_for('edit_entry', entry_id=entry.entree_id) }}"
-              method="post"
-            >
-              <button type="submit">Edit</button>
+             <a href="{{ url_for('edit_entry', entry_id=entry.entree_id) }}">Edit</a>
             </form>
             <form
               action="{{ url_for('delete_entry', entry_id=entry.entree_id) }}"
