--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,4 @@
-<div class="login-container">
+<!-- <div class="login-container">
   <h2>Login</h2>
   <form method="POST">
     <label for="ems_login">EMS Login</label>
@@ -7,4 +7,31 @@
     <input type="password" id="password" name="password" required />
     <button type="submit">Login</button>
   </form>
-</div>
+</div> -->
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>login</title>
+  <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/login/login.css') }}"
+    />
+</head>
+<body>
+ <div class="login-box">
+  <form class="login-form" method="POST">
+    <div class="login-title">Welcome,<br><span>Login to continue</span></div>
+    <input type="text" id="ems_login" placeholder="EMS Login" name="ems_login" class="login-input" required>
+    <input type="password" placeholder="Password" name="password" class="login-input" required>
+    <button  type="submit" class="login-button-confirm">Login →</button>
+  </form>
+ </div>
+</body>
+</html>
