nav_bar.css + hompage(30%)

--- a/static/css/login/login.css
+++ b/static/css/login/login.css
@@ -7,7 +7,7 @@
 
 }
 .login-form {
-    --input-focus:rgb(255, 0, 85);;
+    --input-focus:rgb(255, 0, 85);
     --font-color: #323232;
     --font-color-sub: #666;
     --bg-color: #fff;
