--- a/templates/fill_timesheet.html
+++ b/templates/fill_timesheet.html
@@ -8,6 +8,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/timesheet/fill_timesheet.css') }}"
+    />
     <style>
       .error {
         color: red;
@@ -25,18 +29,16 @@
         const selectedDatesDisplay = $("#selected_dates");
 
         flatpickr("#datepicker", {
-          mode: "multiple", // Enable multiple date selection
+          mode: "multiple",
           dateFormat: "Y-m-d",
-          maxDate: "today", // Prevent future date selection
+          maxDate: "today",
           onChange: function (selectedDates) {
-            // Update the hidden input with selected dates
             datesInput.val(
               selectedDates
                 .map((date) => date.toISOString().split("T")[0])
                 .join(",")
             );
 
-            // Display selected dates
             selectedDatesDisplay.empty();
             if (selectedDates.length > 0) {
               selectedDates.forEach(function (date) {
@@ -73,7 +75,6 @@
             );
           }
 
-          // Dummy values for Category 3
           $("#category_3").append(
             '<option value="dummy_1">Dummy Value 1</option>'
           );
@@ -84,249 +85,130 @@
             '<option value="dummy_3">Dummy Value 3</option>'
           );
         });
-
-        // Populate category 2 based on category 1 selection
-        $("#category_1").change(function () {
-          const selectedCategory = $(this).val();
-          $("#category_2")
-            .empty()
-            .append('<option value="">Select Category 2</option>');
-          $("#category_3")
-            .empty()
-            .append('<option value="">Select Category 3</option>');
-
-          if (selectedCategory === "admin") {
-            $("#category_2").append(
-              '<option value="admin_option1">Admin Option 1</option>'
-            );
-            $("#category_2").append(
-              '<option value="admin_option2">Admin Option 2</option>'
-            );
-            $("#category_2").append(
-              '<option value="admin_option3">Admin Option 3</option>'
-            );
-            $("#category_2").append(
-              '<option value="admin_option4">Admin Option 4</option>'
-            );
-            $("#category_2").append(
-              '<option value="admin_option5">Admin Option 5</option>'
-            );
-
-            // Adding options to Category 3 based on Category 2 selection
-            $("#category_2").change(function () {
-              const selectedAdminOption = $(this).val();
-              $("#category_3")
-                .empty()
-                .append('<option value="">Select Category 3</option>');
-
-              if (selectedAdminOption === "admin_option1") {
-                $("#category_3").append(
-                  '<option value="admin_option1_cat3_1">Option 1 Cat 3</option>'
-                );
-                $("#category_3").append(
-                  '<option value="admin_option1_cat3_2">Option 2 Cat 3</option>'
-                );
-                $("#category_3").append(
-                  '<option value="admin_option1_cat3_3">Option 3 Cat 3</option>'
-                );
-              } else if (selectedAdminOption === "admin_option2") {
-                $("#category_3").append(
-                  '<option value="admin_option2_cat3_1">Option 1 Cat 3</option>'
-                );
-                $("#category_3").append(
-                  '<option value="admin_option2_cat3_2">Option 2 Cat 3</option>'
-                );
-                $("#category_3").append(
-                  '<option value="admin_option2_cat3_3">Option 3 Cat 3</option>'
-                );
-              } else if (selectedAdminOption === "admin_option3") {
-                $("#category_3").append(
-                  '<option value="admin_option3_cat3_1">Option 1 Cat 3</option>'
-                );
-                $("#category_3").append(
-                  '<option value="admin_option3_cat3_2">Option 2 Cat 3</option>'
-                );
-                $("#category_3").append(
-                  '<option value="admin_option3_cat3_3">Option 3 Cat 3</option>'
-                );
-              } else if (selectedAdminOption === "admin_option4") {
-                $("#category_3").append(
-                  '<option value="admin_option4_cat3_1">Option 1 Cat 3</option>'
-                );
-                $("#category_3").append(
-                  '<option value="admin_option4_cat3_2">Option 2 Cat 3</option>'
-                );
-                $("#category_3").append(
-                  '<option value="admin_option4_cat3_3">Option 3 Cat 3</option>'
-                );
-              } else if (selectedAdminOption === "admin_option5") {
-                $("#category_3").append(
-                  '<option value="admin_option5_cat3_1">Option 1 Cat 3</option>'
-                );
-                $("#category_3").append(
-                  '<option value="admin_option5_cat3_2">Option 2 Cat 3</option>'
-                );
-                $("#category_3").append(
-                  '<option value="admin_option5_cat3_3">Option 3 Cat 3</option>'
-                );
-              }
-            });
-          } else if (selectedCategory === "training") {
-            $("#category_2").append(
-              '<option value="training_option1">Training Option 1</option>'
-            );
-            $("#category_2").append(
-              '<option value="training_option2">Training Option 2</option>'
-            );
-            $("#category_2").append(
-              '<option value="training_option3">Training Option 3</option>'
-            );
-            $("#category_2").append(
-              '<option value="training_option4">Training Option 4</option>'
-            );
-
-            // Adding options to Category 3 based on Category 2 selection
-            $("#category_2").change(function () {
-              const selectedTrainingOption = $(this).val();
-              $("#category_3")
-                .empty()
-                .append('<option value="">Select Category 3</option>');
-
-              if (selectedTrainingOption === "training_option1") {
-                $("#category_3").append(
-                  '<option value="training_option1_cat3_1">Training 1 Cat 3 Option 1</option>'
-                );
-              } else if (selectedTrainingOption === "training_option2") {
-                $("#category_3").append(
-                  '<option value="training_option2_cat3_1">Training 2 Cat 3 Option 1</option>'
-                );
-              } else if (selectedTrainingOption === "training_option3") {
-                $("#category_3").append(
-                  '<option value="training_option3_cat3_1">Training 3 Cat 3 Option 1</option>'
-                );
-              } else if (selectedTrainingOption === "training_option4") {
-                $("#category_3").append(
-                  '<option value="training_option4_cat3_1">Training 4 Cat 3 Option 1</option>'
-                );
-              }
-            });
-          }
-        });
       });
     </script>
   </head>
   <body>
-    <h1>Fill Timesheet</h1>
+    {% include 'navbar.html' %}
+
+    <div class="ts-formpage">
+    <nav class="ts-nav-container">
+    <div class="ts-nav-center">
+      <a href="/timesheet_home" class="ts-nav-link">Timesheet</a>
+      <a href="/view_summary" class="ts-nav-link">View Summery</a>
+    </div>
+  </nav>
     <form method="POST" action="/fill_timesheet">
-      <label for="employee_id">Employee ID:</label>
-      <input
-        type="text"
-        id="employee_id"
-        name="employee_id"
-        value="{{ current_user.id }}"
-        readonly
-      /><br />
+      <div class="ts-form-inline">
+        <label for="employee_id">Employee ID:</label>
+        <input
+          type="text"
+          id="employee_id"
+          name="employee_id"
+          value="{{ current_user.id }}"
+          readonly
+        />
 
-      <label for="fname">First Name:</label>
-      <input
-        type="text"
-        id="fname"
-        name="fname"
-        value="{{ current_user.fname }}"
-        readonly
-      /><br />
+        <label for="fname">First Name:</label>
+        <input
+          type="text"
+          id="fname"
+          name="fname"
+          value="{{ current_user.fname }}"
+          readonly
+        />
 
-      <label for="lname">Last Name:</label>
-      <input
-        type="text"
-        id="lname"
-        name="lname"
-        value="{{ current_user.lname }}"
-        readonly
-      /><br />
+        <label for="lname">Last Name:</label>
+        <input
+          type="text"
+          id="lname"
+          name="lname"
+          value="{{ current_user.lname }}"
+          readonly
+        />
 
-      <label for="team">Team:</label>
-      <input
-        type="text"
-        id="team"
-        name="team"
-        value="{{ current_user.team }}"
-        readonly
-      /><br />
+        <label for="team">Team:</label>
+        <input
+          type="text"
+          id="team"
+          name="team"
+          value="{{ current_user.team }}"
+          readonly
+        />
 
-      <label for="manager_name">Manager Name:</label>
-      <input
-        type="text"
-        id="manager_name"
-        name="manager_name"
-        value="{{ current_user.managername }}"
-        readonly
-      /><br />
-
-      <label for="datepicker">Select Dates:</label>
-      <input type="text" id="datepicker" readonly /><br />
-      <input type="hidden" id="dates" name="dates" value="" /><br />
-
-      <div class="selected-dates">
-        <strong>Selected Dates:</strong>
-        <span id="selected_dates">No dates selected.</span>
+        <label for="manager_name">Manager Name:</label>
+        <input
+          type="text"
+          id="manager_name"
+          name="manager_name"
+          value="{{ current_user.managername }}"
+          readonly
+        />
       </div>
 
-      <label for="duration_hours">Duration Hours:</label>
-      <select id="duration_hours" name="duration_hours" required>
-        <option value="">Select Hours</option>
-        <!-- Options from 0 to 23 -->
-        {% for i in range(24) %}
-        <option value="{{ i }}">{{ i }}</option>
-        {% endfor %}</select
-      ><br />
+      <div class="ts-form-inline">
+        <label for="datepicker">Select Dates:</label>
+        <input type="text" id="datepicker" readonly />
+        <input type="hidden" id="dates" name="dates" value="" />
 
-      <label for="duration_minutes">Duration Minutes:</label>
-      <select id="duration_minutes" name="duration_minutes" required>
-        <option value="">Select Minutes</option>
-        <!-- Options for minutes -->
-        <option value="0">0</option>
-        <option value="5">5</option>
-        <option value="10">10</option>
-        <option value="15">15</option>
-        <option value="20">20</option>
-        <option value="25">25</option>
-        <option value="30">30</option>
-        <option value="35">35</option>
-        <option value="40">40</option>
-        <option value="45">45</option>
-        <option value="50">50</option>
-        <option value="55">55</option></select
-      ><br />
+      <div class="ts-form-inline">
+        <label for="duration_hours">Duration Hours:</label>
+        <select id="duration_hours" name="duration_hours" required>
+          <option value="">Select Hours</option>
+          {% for i in range(24) %}
+          <option value="{{ i }}">{{ i }}</option>
+          {% endfor %}
+        </select>
 
-      <label for="allocation_type">Allocation Type:</label>
-      <select id="allocation_type" name="allocation_type">
-        <option value="">Select Allocation Type</option>
-        <option value="billable">Billable</option>
-        <option value="non-billable">Non-Billable</option></select
-      ><br />
+        <label for="duration_minutes">Duration Minutes:</label>
+        <select id="duration_minutes" name="duration_minutes" required>
+          <option value="">Select Minutes</option>
+          <option value="0">0</option>
+          <option value="5">5</option>
+          <option value="10">10</option>
+          <option value="15">15</option>
+          <option value="20">20</option>
+          <option value="25">25</option>
+          <option value="30">30</option>
+          <option value="35">35</option>
+          <option value="40">40</option>
+          <option value="45">45</option>
+          <option value="50">50</option>
+          <option value="55">55</option>
+        </select>
+      </div>
 
-      <label for="category_1">Category 1:</label>
-      <select id="category_1" name="category_1">
-        <option value="">Select Category 1</option>
-        <!-- Initially empty --></select
-      ><br />
+      <div class="ts-form-inline">
+        <label for="allocation_type">Allocation Type:</label>
+        <select id="allocation_type" name="allocation_type">
+          <option value="">Select Allocation Type</option>
+          <option value="billable">Billable</option>
+          <option value="non-billable">Non-Billable</option>
+        </select>
 
-      <label for="category_2">Category 2:</label>
-      <select id="category_2" name="category_2">
-        <option value="">Select Category 2</option>
-        <!-- Initially empty --></select
-      ><br />
+        <label for="category_1">Category 1:</label>
+        <select id="category_1" name="category_1">
+          <option value="">Select Category 1</option>
+        </select>
 
-      <label for="category_3">Category 3:</label>
-      <select id="category_3" name="category_3">
-        <option value="">Select Category 3</option></select
-      ><br />
+        <label for="category_2">Category 2:</label>
+        <select id="category_2" name="category_2">
+          <option value="">Select Category 2</option>
+        </select>
 
-      <label for="comments">Comments:</label>
-      <textarea id="comments" name="comments"></textarea><br />
+        <label for="category_3">Category 3:</label>
+        <select id="category_3" name="category_3">
+          <option value="">Select Category 3</option>
+        </select>
+      </div>
+
+      <div class="ts-form-inline">
+        <label for="comments">Comments:</label>
+        <textarea id="comments" name="comments"></textarea>
+      </div>
 
       <input type="submit" value="Submit" />
     </form>
+    </div>
   </body>
 </html>
